classDiagram
direction TB

class Noeud {
    -String label
    +String getLabel()
    +String toString()
}

class Arete {
    -Noeud A
    -Noeud B
    +String toString()
}

class AretePonderee {
    -int poids
    +int getPoids()
}

class Graphe {
    -List~Noeud~ noeuds
    -List~Arete~ aretes
    +void addNoeud(Noeud n)
    +void removeNoeud(Noeud n)
    +void addArete(Arete a)
    +void removeArete(Arete a)
    +String toString()
}

class GrapheOriente {
    +void addArete(Arete a)
}

class Algorithme {
    -Graphe g
    +void executer(Graphe g, Noeud start)
}

class BFS {
    +void executer(Graphe g, Noeud start)
}

class DFS {
    +void executer(Graphe g, Noeud start)
}

Algorithme <|-- BFS
Algorithme <|-- DFS
Graphe <|-- GrapheOriente
Arete <|-- AretePonderee
Arete *-- Noeud
Graphe *-- Noeud
Graphe *-- Arete
